import axios, { AxiosInstance, AxiosResponse } from 'axios'
import toast from 'react-hot-toast'
import { 
  Employee, 
  EmployeeListResponse, 
  CreateEmployeeRequest, 
  UpdateEmployeeRequest,
  Organization,
  OrganizationProfile,
  OrganizationsApiResponse,
  OrganizationChartApiResponse,
  OrganizationStatsApiResponse,
  CreateOrganizationRequest,
  UpdateOrganizationRequest,
  InterpretRequest,
  InterpretResponse,
  SystemHealth,
  BusinessMetrics,
  WorkflowInstance,
  WorkflowStatsResponse
} from '@/types'
import { 
  API_BASE_URL, 
  AI_API_URL, 
  DEFAULT_TENANT_ID, 
  DEFAULT_TIMEOUT,
  REST_ROUTES,
  AI_ROUTES,
  buildApiUrl 
} from '@/lib/routes'

// åˆ›å»º HTTP å®¢æˆ·ç«¯
const httpClient: AxiosInstance = axios.create({
  baseURL: API_BASE_URL,
  timeout: DEFAULT_TIMEOUT.STANDARD,
  headers: {
    'Content-Type': 'application/json',
  },
})

// åˆ›å»º AI æœåŠ¡å®¢æˆ·ç«¯ (gRPC Gateway)
const aiClient: AxiosInstance = axios.create({
  baseURL: AI_API_URL,
  timeout: DEFAULT_TIMEOUT.AI_SERVICE,
  headers: {
    'Content-Type': 'application/json',
  },
})

// è¯·æ±‚æ‹¦æˆªå™¨ - æ·»åŠ è®¤è¯ä¿¡æ¯
httpClient.interceptors.request.use(
  (config) => {
    // ä»localStorageè·å–token (åç»­å®ç°è®¤è¯æ—¶ä½¿ç”¨)
    const token = localStorage.getItem('auth_token')
    if (token) {
      config.headers.Authorization = `Bearer ${token}`
    }
    
    // æ·»åŠ ç§Ÿæˆ·ID (å¤šç§Ÿæˆ·æ”¯æŒ) - å¼€å‘ç¯å¢ƒé»˜è®¤é…ç½®
    const tenantId = localStorage.getItem('tenant_id') || DEFAULT_TENANT_ID
    config.headers['X-Tenant-ID'] = tenantId
    
    return config
  },
  (error) => Promise.reject(error)
)

// å“åº”æ‹¦æˆªå™¨ - ç»Ÿä¸€é”™è¯¯å¤„ç†
httpClient.interceptors.response.use(
  (response: AxiosResponse) => response,
  (error) => {
    // æ£€æŸ¥æ˜¯å¦æ˜¯å·²çŸ¥çš„APIæœªå®ç°é”™è¯¯ï¼Œä¸æ˜¾ç¤ºtoast
    const isKnownUnimplementedAPI = error.config?.url?.includes('/organizations/stats') || 
                                    error.config?.url?.includes('/intelligence/') ||
                                    (error.response?.status === 404 && error.config?.url?.includes('/api/v1/corehr/'))
    
    if (isKnownUnimplementedAPI) {
      // å¯¹äºå·²çŸ¥çš„æœªå®ç°APIï¼Œé™é»˜å¤„ç†
      return Promise.reject(error)
    }
    
    if (error.response?.status === 401) {
      // æœªæˆæƒï¼Œè·³è½¬åˆ°ç™»å½•é¡µ
      localStorage.removeItem('auth_token')
      window.location.href = '/login'
    } else if (error.response?.status >= 500) {
      // æœåŠ¡å™¨é”™è¯¯
      toast.error('æœåŠ¡å™¨é”™è¯¯ï¼Œè¯·ç¨åé‡è¯•')
    } else if (error.response?.data?.message) {
      // ä¸šåŠ¡é”™è¯¯
      toast.error(error.response.data.message)
    } else if (!isKnownUnimplementedAPI) {
      // å…¶ä»–ç½‘ç»œé”™è¯¯ï¼ˆæ’é™¤å·²çŸ¥çš„æœªå®ç°APIï¼‰
      toast.error('ç½‘ç»œè¿æ¥å¤±è´¥ï¼Œè¯·æ£€æŸ¥ç½‘ç»œè®¾ç½®')
    }
    return Promise.reject(error)
  }
)

// AI å®¢æˆ·ç«¯æ‹¦æˆªå™¨
aiClient.interceptors.request.use(
  (config) => {
    const tenantId = localStorage.getItem('tenant_id') || DEFAULT_TENANT_ID
    config.headers['X-Tenant-ID'] = tenantId
    return config
  },
  (error) => Promise.reject(error)
)

aiClient.interceptors.response.use(
  (response: AxiosResponse) => response,
  (error) => {
    // AI Service Error - error handled by caller
    if (error.response?.data?.message) {
      toast.error(`AIæœåŠ¡é”™è¯¯: ${error.response.data.message}`)
    } else {
      toast.error('AIæœåŠ¡æš‚æ—¶ä¸å¯ç”¨')
    }
    return Promise.reject(error)
  }
)

// å‘˜å·¥ç®¡ç† API
export const employeeApi = {
  // è·å–å‘˜å·¥åˆ—è¡¨
  async getEmployees(params: {
    page?: number
    pageSize?: number
    search?: string
    status?: string
    organizationId?: string
  } = {}): Promise<EmployeeListResponse> {
    const response = await httpClient.get(REST_ROUTES.COREHR.EMPLOYEES, { params })
    return response.data
  },

  // æ ¹æ®IDè·å–å‘˜å·¥è¯¦æƒ…
  async getEmployee(id: string): Promise<Employee> {
    const response = await httpClient.get(REST_ROUTES.COREHR.EMPLOYEE_BY_ID(id))
    return response.data
  },

  // åˆ›å»ºå‘˜å·¥
  async createEmployee(data: CreateEmployeeRequest): Promise<Employee> {
    const response = await httpClient.post(REST_ROUTES.COREHR.EMPLOYEES, data)
    toast.success('å‘˜å·¥åˆ›å»ºæˆåŠŸ')
    return response.data
  },

  // æ›´æ–°å‘˜å·¥ä¿¡æ¯
  async updateEmployee(id: string, data: UpdateEmployeeRequest): Promise<Employee> {
    const response = await httpClient.put(REST_ROUTES.COREHR.EMPLOYEE_BY_ID(id), data)
    toast.success('å‘˜å·¥ä¿¡æ¯æ›´æ–°æˆåŠŸ')
    return response.data
  },

  // åˆ é™¤å‘˜å·¥
  async deleteEmployee(id: string): Promise<void> {
    await httpClient.delete(REST_ROUTES.COREHR.EMPLOYEE_BY_ID(id))
    toast.success('å‘˜å·¥åˆ é™¤æˆåŠŸ')
  },

  // æ‰¹é‡æ“ä½œ
  async bulkUpdateEmployees(ids: string[], data: Partial<UpdateEmployeeRequest>): Promise<void> {
    await httpClient.patch(buildApiUrl('/api/v1/corehr/employees/bulk'), { ids, data })
    toast.success(`æ‰¹é‡æ›´æ–° ${ids.length} åå‘˜å·¥æˆåŠŸ`)
  }
}

// ç»Ÿä¸€çš„ç»„ç»‡æ¶æ„APIé€‚é…å™¨ (å®Œå…¨å¯¹é½åç«¯organization_adapter.go)
export const organizationApi = {
  // è·å–ç»„ç»‡åˆ—è¡¨ (æ ‡å‡†åŒ–APIè°ƒç”¨)
  async getOrganizations(params: {
    page?: number
    pageSize?: number
    search?: string
    parent_unit_id?: string
    unit_type?: string
    status?: string
  } = {}): Promise<OrganizationsApiResponse> {
    try {
      console.log('ğŸ”„ è°ƒç”¨CoreHRç»„ç»‡API:', params);
      const response = await httpClient.get(REST_ROUTES.COREHR.ORGANIZATIONS, { params })
      
      console.log('âœ… CoreHRç»„ç»‡APIå“åº”:', response.data);
      return response.data
    } catch (error) {
      console.error('âŒ PostgreSQLç»„ç»‡APIè°ƒç”¨å¤±è´¥:', error);
      
      // Fallback to mock data only on network errors
      const mockOrganizations: Organization[] = [
        {
          id: '186b1cd6-de34-4418-8219-22c917334787',
          name: 'Cube Castle',
          unit_type: 'COMPANY',
          description: 'å…¨æ ˆä¼ä¸šç®¡ç†è§£å†³æ–¹æ¡ˆæä¾›å•†',
          level: 0,
          parent_unit_id: undefined,
          employee_count: 50,
          tenant_id: '00000000-0000-0000-0000-000000000001',
          status: 'ACTIVE',
          profile: {
            managerName: 'CEO',
            maxCapacity: 200
          },
          createdAt: new Date().toISOString(),
          updatedAt: new Date().toISOString(),
        }
      ];

      return {
        organizations: mockOrganizations,
        pagination: { 
          page: params.page || 1, 
          pageSize: params.pageSize || 100, 
          total: mockOrganizations.length, 
          totalPages: 1 
        }
      }
    }
  },

  // è·å–ç»„ç»‡ç»Ÿè®¡ (ä½¿ç”¨CoreHRé€‚é…å™¨API)
  async getStats(): Promise<OrganizationStatsApiResponse> {
    try {
      const response = await httpClient.get(REST_ROUTES.COREHR.ORGANIZATION_STATS)
      return response.data
    } catch (error) {
      console.warn('âš ï¸ ç»„ç»‡ç»Ÿè®¡APIæš‚ä¸å¯ç”¨ï¼Œä½¿ç”¨é»˜è®¤æ•°æ®');
      // è¿”å›é»˜è®¤ç»Ÿè®¡æ•°æ®
      return {
        data: {
          total: 1,
          active: 1,
          inactive: 0,
          totalEmployees: 0
        }
      }
    }
  },

  // æ ¹æ®IDè·å–ç»„ç»‡è¯¦æƒ… (ä½¿ç”¨CoreHRé€‚é…å™¨API)
  async getOrganization(id: string): Promise<Organization> {
    const response = await httpClient.get(REST_ROUTES.COREHR.ORGANIZATION_BY_ID(id))
    return response.data
  },

  // åˆ›å»ºç»„ç»‡ (ä¸¥æ ¼ç±»å‹æ£€æŸ¥å’Œæ•°æ®æ¸…ç†)
  async createOrganization(data: CreateOrganizationRequest): Promise<Organization> {
    // æ•°æ®æ¸…ç†å’Œç±»å‹ç¡®ä¿
    const cleanData: CreateOrganizationRequest = {
      ...data,
      parent_unit_id: data.parent_unit_id ? String(data.parent_unit_id).trim() : undefined,
      status: data.status || 'ACTIVE',
      profile: data.profile || {}
    }
    
    console.log('ğŸ¯ åˆ›å»ºç»„ç»‡APIè°ƒç”¨ (æ¸…ç†åæ•°æ®):', cleanData);
    const response = await httpClient.post(REST_ROUTES.COREHR.ORGANIZATIONS, cleanData)
    console.log('ğŸ‰ ç»„ç»‡åˆ›å»ºæˆåŠŸ:', response.data);
    return response.data
  },

  // æ›´æ–°ç»„ç»‡ä¿¡æ¯ (ä¸¥æ ¼ç±»å‹æ£€æŸ¥)
  async updateOrganization(id: string, data: UpdateOrganizationRequest): Promise<Organization> {
    // æ•°æ®æ¸…ç†
    const cleanData: UpdateOrganizationRequest = {
      ...data,
      parent_unit_id: data.parent_unit_id ? String(data.parent_unit_id).trim() : undefined
    }
    
    console.log('ğŸ“ æ›´æ–°ç»„ç»‡APIè°ƒç”¨:', id, cleanData);
    const response = await httpClient.put(REST_ROUTES.COREHR.ORGANIZATION_BY_ID(id), cleanData)
    console.log('âœ… ç»„ç»‡æ›´æ–°æˆåŠŸ:', response.data);
    return response.data
  },

  // åˆ é™¤ç»„ç»‡ (ä½¿ç”¨CoreHRé€‚é…å™¨API)
  async deleteOrganization(id: string): Promise<void> {
    console.log('ğŸ—‘ï¸ åˆ é™¤ç»„ç»‡APIè°ƒç”¨:', id);
    await httpClient.delete(REST_ROUTES.COREHR.ORGANIZATION_BY_ID(id))
    console.log('âœ… ç»„ç»‡åˆ é™¤æˆåŠŸ');
  }
}

// AI æ™ºèƒ½äº¤äº’ API
export const intelligenceApi = {
  // æ–‡æœ¬æ„å›¾è¯†åˆ«å’Œå¯¹è¯
  async interpretText(data: InterpretRequest): Promise<InterpretResponse> {
    try {
      // ä¸ºäº†ä¿æŒä¼šè¯çŠ¶æ€ï¼Œæˆ‘ä»¬æ·»åŠ ä¼šè¯ID
      const sessionId = data.sessionId || generateSessionId()
      
      const response = await httpClient.post(AI_ROUTES.INTELLIGENCE.INTERPRET, {
        ...data,
        sessionId
      })
      
      // æ£€æŸ¥åç«¯æ˜¯å¦è¿”å›æœªå®ç°çŠ¶æ€
      if (response.data?.status === 'not_implemented') {
        // è¿”å›Mock AIå“åº”
        return {
          intent: 'general_query',
          confidence: 0.9,
          response: `æˆ‘ç†è§£æ‚¨è¯´çš„æ˜¯ï¼š"${data.text}"ã€‚è¿™æ˜¯ä¸€ä¸ªæ¨¡æ‹Ÿçš„AIå›å¤ï¼Œå®é™…AIæœåŠ¡æ­£åœ¨å¼€å‘ä¸­ã€‚`,
          entities: [],
          sessionId,
          suggestions: [
            'æ‚¨å¯ä»¥å°è¯•è¯¢é—®å‘˜å·¥ä¿¡æ¯',
            'æˆ–è€…æŸ¥çœ‹ç»„ç»‡æ¶æ„',
            'ä¹Ÿå¯ä»¥äº†è§£ç³»ç»ŸåŠŸèƒ½'
          ]
        }
      }
      
      return {
        ...response.data,
        sessionId
      }
    } catch (error) {
      // ç½‘ç»œé”™è¯¯æ—¶è¿”å›å‹å¥½çš„é”™è¯¯å›å¤
      return {
        intent: 'error',
        confidence: 1.0,
        response: 'æŠ±æ­‰ï¼ŒAIæœåŠ¡æš‚æ—¶ä¸å¯ç”¨ã€‚è¯·ç¨åå†è¯•æˆ–è”ç³»ç®¡ç†å‘˜ã€‚',
        entities: [],
        sessionId: data.sessionId || generateSessionId(),
        suggestions: ['è¯·æ£€æŸ¥ç½‘ç»œè¿æ¥', 'ç¨åé‡è¯•', 'è”ç³»æŠ€æœ¯æ”¯æŒ']
      }
    }
  },

  // è·å–å¯¹è¯å†å² (å¦‚æœAIæœåŠ¡æ”¯æŒ)
  async getConversationHistory(sessionId: string): Promise<any[]> {
    try {
      const response = await httpClient.get(AI_ROUTES.INTELLIGENCE.CONVERSATION_HISTORY(sessionId))
      return response.data.history || []
    } catch {
      // å¦‚æœæœåŠ¡ä¸æ”¯æŒå†å²è®°å½•ï¼Œè¿”å›ç©ºæ•°ç»„
      return []
    }
  },

  // æ¸…é™¤å¯¹è¯å†å²
  async clearConversationHistory(sessionId: string): Promise<void> {
    try {
      await httpClient.delete(AI_ROUTES.INTELLIGENCE.CONVERSATION_HISTORY(sessionId))
    } catch {
      // å¿½ç•¥åˆ é™¤å¤±è´¥çš„æƒ…å†µ
    }
  }
}

// å·¥ä½œæµ API
export const workflowApi = {
  // è·å–å·¥ä½œæµå®ä¾‹åˆ—è¡¨
  async getWorkflowInstances(params: {
    page?: number
    pageSize?: number
    status?: string
    workflowName?: string
  } = {}): Promise<{ instances: WorkflowInstance[], pagination: any }> {
    const response = await httpClient.get(REST_ROUTES.WORKFLOWS.INSTANCES, { params })
    return response.data
  },

  // è·å–å·¥ä½œæµå®ä¾‹è¯¦æƒ…
  async getWorkflowInstance(id: string): Promise<WorkflowInstance> {
    const response = await httpClient.get(REST_ROUTES.WORKFLOWS.INSTANCE_BY_ID(id))
    return response.data
  },

  // å¯åŠ¨å·¥ä½œæµ
  async startWorkflow(workflowName: string, input: any): Promise<WorkflowInstance> {
    const response = await httpClient.post(REST_ROUTES.WORKFLOWS.START, {
      workflowName,
      input
    })
    toast.success('å·¥ä½œæµå¯åŠ¨æˆåŠŸ')
    return response.data
  },

  // è·å–å·¥ä½œæµç»Ÿè®¡ä¿¡æ¯
  async getWorkflowStats(): Promise<WorkflowStatsResponse> {
    const response = await httpClient.get(REST_ROUTES.WORKFLOWS.STATS)
    return response.data
  }
}

// ç³»ç»Ÿç›‘æ§ API
export const systemApi = {
  // è·å–ç³»ç»Ÿå¥åº·çŠ¶æ€
  async getSystemHealth(): Promise<SystemHealth> {
    const response = await httpClient.get(REST_ROUTES.SYSTEM.HEALTH)
    return response.data
  },

  // è·å–ä¸šåŠ¡æŒ‡æ ‡
  async getBusinessMetrics(): Promise<BusinessMetrics> {
    const response = await httpClient.get(REST_ROUTES.SYSTEM.METRICS)
    return response.data
  },

  // è·å–ç³»ç»Ÿç‰ˆæœ¬ä¿¡æ¯
  async getSystemInfo(): Promise<any> {
    const response = await httpClient.get(REST_ROUTES.SYSTEM.INFO)
    return response.data
  }
}

// è¾…åŠ©å‡½æ•°
function generateSessionId(): string {
  return `session_${Date.now()}_${Math.random().toString(36).substr(2, 9)}`
}

// å¯¼å‡ºæ‰€æœ‰API
export const apiClient = {
  employees: employeeApi,
  organizations: organizationApi,
  intelligence: intelligenceApi,
  workflows: workflowApi,
  system: systemApi,
  
  // ç›´æ¥è®¿é—®HTTPå®¢æˆ·ç«¯ (ç”¨äºè‡ªå®šä¹‰è¯·æ±‚)
  http: httpClient,
  ai: aiClient
}

export default apiClient