package main

import (
	"context"
	"encoding/json"
	"fmt"
	"log"
	"net/http"
	"os"
	"os/signal"
	"runtime"
	"strconv"
	"syscall"
	"time"

	"github.com/go-chi/chi/v5"
	chimiddleware "github.com/go-chi/chi/v5/middleware"
	"github.com/google/uuid"
	"google.golang.org/grpc"
	"google.golang.org/grpc/credentials/insecure"
	"github.com/gaogu/cube-castle/go-app/generated/openapi"
	"github.com/gaogu/cube-castle/go-app/generated/grpc/intelligence"
	"github.com/gaogu/cube-castle/go-app/internal/logging"
	"github.com/gaogu/cube-castle/go-app/internal/metrics"
	"github.com/gaogu/cube-castle/go-app/internal/middleware"
	"github.com/gaogu/cube-castle/go-app/internal/corehr"
	"github.com/gaogu/cube-castle/go-app/internal/common"
)

const (
	ServiceName = "cube-castle-api"
	Version     = "v1.4.0"
	AIServiceGRPCAddr = "localhost:50051"
)

// Global AI service client
var aiClient intelligence.IntelligenceServiceClient

func main() {
	// åˆå§‹åŒ–ç»“æ„åŒ–æ—¥å¿—å™¨
	logger := logging.NewStructuredLogger()
	
	// è®°å½•æœåŠ¡å¯åŠ¨
	startTime := time.Now()
	logger.LogServiceStartup(ServiceName, Version, map[string]interface{}{
		"go_version": runtime.Version(),
		"arch":       runtime.GOARCH,
		"os":         runtime.GOOS,
		"port":       "8080",
	})

	// åˆå§‹åŒ–æ•°æ®åº“è¿æ¥
	db := common.InitDatabaseConnection()
	if db == nil {
		logger.LogError("database_init", "Failed to initialize database", nil, map[string]interface{}{
			"service": ServiceName,
		})
		// åœ¨å¼€å‘æ¨¡å¼ä¸‹ç»§ç»­è¿è¡Œï¼ˆä½¿ç”¨Mockï¼‰
		logger.Info("Running in mock mode - using in-memory data")
	} else {
		logger.Info("Database connected successfully")
	}

	// åˆå§‹åŒ–æœåŠ¡
	coreHRService := initializeCoreHRService(db, logger)

	// åˆå§‹åŒ–AIæœåŠ¡gRPCè¿æ¥
	err := initializeAIServiceClient(logger)
	if err != nil {
		logger.LogError("ai_service_init", "Failed to initialize AI service client", err, map[string]interface{}{
			"grpc_addr": AIServiceGRPCAddr,
		})
		logger.Info("AI service will use fallback mode")
	}

	// åˆ›å»ºè·¯ç”±å™¨
	router := setupRoutes(logger, coreHRService)

	// åˆ›å»ºHTTPæœåŠ¡å™¨
	server := &http.Server{
		Addr:         ":8080",
		Handler:      router,
		ReadTimeout:  30 * time.Second,
		WriteTimeout: 30 * time.Second,
		IdleTimeout:  120 * time.Second,
	}

	// å¯åŠ¨ç³»ç»ŸæŒ‡æ ‡æ›´æ–°åç¨‹
	go startSystemMetricsUpdater(logger, startTime)

	// å¯åŠ¨æœåŠ¡å™¨
	go func() {
		logger.Info("ğŸš€ Cube Castle API Server starting",
			"service", ServiceName,
			"version", Version,
			"port", "8080",
			"health_check", "http://localhost:8080/health",
			"metrics", "http://localhost:8080/metrics",
		)

		if err := server.ListenAndServe(); err != nil && err != http.ErrServerClosed {
			logger.LogError("server_start", "Failed to start server", err, map[string]interface{}{
				"port": "8080",
			})
			log.Fatal(err)
		}
	}()

	// ç­‰å¾…ä¸­æ–­ä¿¡å·ä»¥ä¼˜é›…å…³é—­æœåŠ¡å™¨
	quit := make(chan os.Signal, 1)
	signal.Notify(quit, syscall.SIGINT, syscall.SIGTERM)
	<-quit

	logger.Info("ğŸ›‘ Shutting down server...")

	// åˆ›å»ºå…³é—­ä¸Šä¸‹æ–‡
	ctx, cancel := context.WithTimeout(context.Background(), 30*time.Second)
	defer cancel()

	// ä¼˜é›…å…³é—­æœåŠ¡å™¨
	if err := server.Shutdown(ctx); err != nil {
		logger.LogError("server_shutdown", "Server forced to shutdown", err, nil)
		log.Fatal(err)
	}

	// è®°å½•æœåŠ¡å…³é—­
	uptime := time.Since(startTime)
	logger.LogServiceShutdown(ServiceName, "graceful_shutdown", uptime)
	logger.Info("âœ… Server exited successfully")
}

// setupRoutes è®¾ç½®è·¯ç”±
func setupRoutes(logger *logging.StructuredLogger, coreHRService *corehr.Service) *chi.Mux {
	r := chi.NewRouter()

	// æ·»åŠ ä¸­é—´ä»¶
	r.Use(chimiddleware.RequestID)
	r.Use(chimiddleware.RealIP)
	r.Use(middleware.RecoveryMiddleware(logger))
	r.Use(middleware.LoggingMiddleware(logger))
	r.Use(metrics.PrometheusMiddleware)
	r.Use(middleware.CORSMiddleware)
	r.Use(middleware.TenantMiddleware)
	r.Use(middleware.AuthMiddleware(logger))
	r.Use(chimiddleware.Timeout(60 * time.Second))

	// å¥åº·æ£€æŸ¥ç«¯ç‚¹ï¼ˆä¸éœ€è¦è®¤è¯ï¼‰
	r.Get("/health", middleware.HealthCheckMiddleware(logger))

	// PrometheusæŒ‡æ ‡ç«¯ç‚¹ï¼ˆä¸éœ€è¦è®¤è¯ï¼‰
	r.Handle("/metrics", metrics.MetricsHandler())

	// API v1 è·¯ç”±ç»„
	r.Route("/api/v1", func(r chi.Router) {
		// CoreHR æ¨¡å—è·¯ç”±
		r.Route("/corehr", func(r chi.Router) {
			r.Get("/employees", handleListEmployees(coreHRService, logger))
			r.Post("/employees", handleCreateEmployee(coreHRService, logger))
			r.Route("/employees/{employeeID}", func(r chi.Router) {
				r.Get("/", handleGetEmployee(coreHRService, logger))
				r.Put("/", handleUpdateEmployee(coreHRService, logger))
				r.Delete("/", handleDeleteEmployee(coreHRService, logger))
				r.Get("/manager", handleGetEmployeeManager(coreHRService, logger))
			})
			
			// ç»„ç»‡æ¶æ„è·¯ç”±
			r.Get("/organizations", handleListOrganizations(coreHRService, logger))
			r.Get("/organizations/tree", handleGetOrganizationTree(coreHRService, logger))
			r.Post("/organizations", handleCreateOrganization(coreHRService, logger))
		})

		// Intelligence Gateway è·¯ç”±
		r.Route("/intelligence", func(r chi.Router) {
			r.Post("/interpret", handleInterpretText(logger))
			r.Get("/health", handleIntelligenceHealth(logger))
		})

		// ç›‘æ§å’Œç®¡ç†è·¯ç”±
		r.Route("/admin", func(r chi.Router) {
			r.Get("/metrics/business", handleBusinessMetrics(logger))
			r.Get("/health/detailed", handleDetailedHealth(logger))
			r.Post("/cache/clear", handleClearCache(logger))
		})
	})

	return r
}

// initializeCoreHRService åˆå§‹åŒ–CoreHRæœåŠ¡
func initializeCoreHRService(db interface{}, logger *logging.StructuredLogger) *corehr.Service {
	if db == nil {
		// Mockæ¨¡å¼
		logger.Info("Initializing CoreHR service in mock mode")
		return corehr.NewMockService()
	}

	// å®é™…æ¨¡å¼ - è¿™é‡Œéœ€è¦æ ¹æ®å®é™…çš„æ•°æ®åº“è¿æ¥ç±»å‹è¿›è¡Œè°ƒæ•´
	logger.Info("Initializing CoreHR service with database connection")
	return corehr.NewMockService() // æš‚æ—¶ä½¿ç”¨Mockï¼Œç­‰æ•°æ®åº“é›†æˆå®Œæˆåæ›´æ–°
}

// initializeAIServiceClient åˆå§‹åŒ–AIæœåŠ¡gRPCå®¢æˆ·ç«¯
func initializeAIServiceClient(logger *logging.StructuredLogger) error {
	// å»ºç«‹gRPCè¿æ¥
	conn, err := grpc.Dial(AIServiceGRPCAddr, grpc.WithTransportCredentials(insecure.NewCredentials()))
	if err != nil {
		return err
	}

	// åˆ›å»ºå®¢æˆ·ç«¯
	aiClient = intelligence.NewIntelligenceServiceClient(conn)
	
	// æµ‹è¯•è¿æ¥
	ctx, cancel := context.WithTimeout(context.Background(), 5*time.Second)
	defer cancel()
	
	testReq := &intelligence.InterpretRequest{
		UserText:  "test connection",
		SessionId: "connection_test",
	}
	
	_, err = aiClient.InterpretText(ctx, testReq)
	if err != nil {
		logger.LogError("ai_service_test", "AI service connection test failed", err, map[string]interface{}{
			"grpc_addr": AIServiceGRPCAddr,
		})
		return err
	}
	
	logger.Info("âœ… AI service gRPC client initialized successfully", "grpc_addr", AIServiceGRPCAddr)
	return nil
}

// startSystemMetricsUpdater å¯åŠ¨ç³»ç»ŸæŒ‡æ ‡æ›´æ–°å™¨
func startSystemMetricsUpdater(logger *logging.StructuredLogger, startTime time.Time) {
	ticker := time.NewTicker(30 * time.Second)
	defer ticker.Stop()

	for {
		select {
		case <-ticker.C:
			// æ›´æ–°ç³»ç»ŸæŒ‡æ ‡
			var m runtime.MemStats
			runtime.ReadMemStats(&m)
			
			uptime := time.Since(startTime)
			goroutines := runtime.NumGoroutine()
			
			metrics.UpdateSystemMetrics(
				uptime,
				m.HeapAlloc,
				m.StackInuse,
				m.Sys,
				goroutines,
			)

			// è®°å½•æ€§èƒ½æŒ‡æ ‡
			logger.LogPerformanceMetric("memory_heap", float64(m.HeapAlloc), "bytes", map[string]string{
				"service": ServiceName,
			})
			logger.LogPerformanceMetric("goroutines", float64(goroutines), "count", map[string]string{
				"service": ServiceName,
			})
		}
	}
}

// === HTTPå¤„ç†å™¨å‡½æ•° ===

// handleListEmployees å¤„ç†å‘˜å·¥åˆ—è¡¨è¯·æ±‚
func handleListEmployees(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		start := time.Now()
		reqLogger := logger.WithContext(r.Context())
		
		// è·å–æŸ¥è¯¢å‚æ•°
		page := getIntParam(r, "page", 1)
		pageSize := getIntParam(r, "page_size", 20)
		search := r.URL.Query().Get("search")
		tenantID := getTenantID(r.Context())
		
		// è°ƒç”¨æœåŠ¡
		response, err := service.ListEmployees(r.Context(), tenantID, page, pageSize, search)
		if err != nil {
			reqLogger.LogError("list_employees", "Failed to list employees", err, map[string]interface{}{
				"page": page,
				"page_size": pageSize,
				"search": search,
			})
			metrics.RecordError("corehr", "list_employees_error")
			http.Error(w, "Internal server error", http.StatusInternalServerError)
			return
		}

		// è®°å½•æŒ‡æ ‡
		duration := time.Since(start)
		metrics.RecordDatabaseOperation("SELECT", "employees", "success", duration)
		reqLogger.LogDatabaseOperation("SELECT", "employees", len(*response.Employees), duration, true)

		// è¿”å›å“åº”
		respondJSON(w, http.StatusOK, response)
	}
}

// handleCreateEmployee å¤„ç†åˆ›å»ºå‘˜å·¥è¯·æ±‚
func handleCreateEmployee(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		start := time.Now()
		reqLogger := logger.WithContext(r.Context())
		tenantID := getTenantID(r.Context())

		// è§£æè¯·æ±‚ä½“
		var req CreateEmployeeRequest
		if err := parseJSON(r, &req); err != nil {
			reqLogger.LogError("parse_request", "Failed to parse create employee request", err, nil)
			http.Error(w, "Invalid request body", http.StatusBadRequest)
			return
		}

		// è°ƒç”¨æœåŠ¡
		employee, err := service.CreateEmployee(r.Context(), tenantID, &req)
		if err != nil {
			reqLogger.LogError("create_employee", "Failed to create employee", err, map[string]interface{}{
				"employee_number": req.EmployeeNumber,
				"first_name": req.FirstName,
				"last_name": req.LastName,
			})
			metrics.RecordError("corehr", "create_employee_error")
			http.Error(w, "Failed to create employee", http.StatusInternalServerError)
			return
		}

		// è®°å½•æŒ‡æ ‡å’Œæ—¥å¿—
		duration := time.Since(start)
		metrics.RecordEmployeeCreated(tenantID.String())
		metrics.RecordDatabaseOperation("INSERT", "employees", "success", duration)
		reqLogger.LogEmployeeCreated(*employee.Id, tenantID, req.EmployeeNumber)

		// è¿”å›å“åº”
		respondJSON(w, http.StatusCreated, employee)
	}
}

// å…¶ä»–å¤„ç†å™¨å‡½æ•°çš„å®ç°å¯ä»¥ç±»ä¼¼åœ°æ·»åŠ ...

// === è¾…åŠ©å‡½æ•° ===

// getIntParam è·å–æ•´æ•°å‚æ•°
func getIntParam(r *http.Request, key string, defaultValue int) int {
	if value := r.URL.Query().Get(key); value != "" {
		if intValue, err := strconv.Atoi(value); err == nil {
			return intValue
		}
	}
	return defaultValue
}

// getTenantID ä»ä¸Šä¸‹æ–‡è·å–ç§Ÿæˆ·ID
func getTenantID(ctx context.Context) uuid.UUID {
	if tenantID := ctx.Value(middleware.TenantIDKey); tenantID != nil {
		if id, err := uuid.Parse(tenantID.(string)); err == nil {
			return id
		}
	}
	// è¿”å›é»˜è®¤ç§Ÿæˆ·ID
	return uuid.MustParse("00000000-0000-0000-0000-000000000000")
}

// parseJSON è§£æJSONè¯·æ±‚ä½“
func parseJSON(r *http.Request, v interface{}) error {
	defer r.Body.Close()
	return json.NewDecoder(r.Body).Decode(v)
}

// respondJSON å‘é€JSONå“åº”
func respondJSON(w http.ResponseWriter, statusCode int, data interface{}) {
	w.Header().Set("Content-Type", "application/json")
	w.WriteHeader(statusCode)
	json.NewEncoder(w).Encode(data)
}

// CreateEmployeeRequest ä¸´æ—¶ç±»å‹å®šä¹‰ï¼ˆåº”è¯¥ä»openapiç”Ÿæˆçš„ä»£ç ä¸­å¯¼å…¥ï¼‰
type CreateEmployeeRequest = openapi.CreateEmployeeRequest

// === å ä½ç¬¦å¤„ç†å™¨ï¼ˆå¾…å®ç°ï¼‰ ===

func handleGetEmployee(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleUpdateEmployee(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleDeleteEmployee(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleGetEmployeeManager(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleListOrganizations(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleGetOrganizationTree(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleCreateOrganization(service *corehr.Service, logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleInterpretText(logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		start := time.Now()
		reqLogger := logger.WithContext(r.Context())

		// è§£æè¯·æ±‚ä½“
		var reqData struct {
			Text      string `json:"text"`
			SessionId string `json:"sessionId"`
		}
		
		if err := parseJSON(r, &reqData); err != nil {
			reqLogger.LogError("parse_request", "Failed to parse interpret text request", err, nil)
			http.Error(w, "Invalid request body", http.StatusBadRequest)
			return
		}

		// éªŒè¯è¾“å…¥
		if reqData.Text == "" {
			http.Error(w, "Text field is required", http.StatusBadRequest)
			return
		}

		// å¦‚æœæ²¡æœ‰sessionIdï¼Œç”Ÿæˆä¸€ä¸ª
		if reqData.SessionId == "" {
			reqData.SessionId = uuid.New().String()
		}

		// æ£€æŸ¥AIå®¢æˆ·ç«¯æ˜¯å¦å¯ç”¨
		if aiClient == nil {
			// è¿”å›Mockå“åº”
			response := map[string]interface{}{
				"intent":      "general_query",
				"confidence":  0.9,
				"response":    fmt.Sprintf("æˆ‘ç†è§£æ‚¨è¯´çš„æ˜¯ï¼š\"%s\"ã€‚è¿™æ˜¯ä¸€ä¸ªæ¨¡æ‹Ÿçš„AIå›å¤ï¼ŒAIæœåŠ¡æš‚æ—¶ä¸å¯ç”¨ã€‚", reqData.Text),
				"entities":    []string{},
				"sessionId":   reqData.SessionId,
				"suggestions": []string{"è¯·æ£€æŸ¥AIæœåŠ¡çŠ¶æ€", "ç¨åé‡è¯•", "è”ç³»æŠ€æœ¯æ”¯æŒ"},
			}
			respondJSON(w, http.StatusOK, response)
			return
		}

		// è°ƒç”¨AIæœåŠ¡
		ctx, cancel := context.WithTimeout(r.Context(), 10*time.Second)
		defer cancel()

		grpcReq := &intelligence.InterpretRequest{
			UserText:  reqData.Text,
			SessionId: reqData.SessionId,
		}

		grpcResp, err := aiClient.InterpretText(ctx, grpcReq)
		if err != nil {
			reqLogger.LogError("ai_service_call", "Failed to call AI service", err, map[string]interface{}{
				"text":       reqData.Text,
				"session_id": reqData.SessionId,
			})
			
			// è¿”å›å‹å¥½çš„é”™è¯¯å“åº”
			response := map[string]interface{}{
				"intent":      "error",
				"confidence":  1.0,
				"response":    "æŠ±æ­‰ï¼ŒAIæœåŠ¡æš‚æ—¶ä¸å¯ç”¨ã€‚è¯·ç¨åå†è¯•ã€‚",
				"entities":    []string{},
				"sessionId":   reqData.SessionId,
				"suggestions": []string{"è¯·æ£€æŸ¥ç½‘ç»œè¿æ¥", "ç¨åé‡è¯•", "è”ç³»æŠ€æœ¯æ”¯æŒ"},
			}
			respondJSON(w, http.StatusOK, response)
			return
		}

		// æ„å»ºå“åº”
		// è§£æstructured_data_jsonä¸­çš„æ•°æ®
		var structuredData map[string]interface{}
		if err := json.Unmarshal([]byte(grpcResp.StructuredDataJson), &structuredData); err != nil {
			reqLogger.LogError("parse_structured_data", "Failed to parse structured data JSON", err, map[string]interface{}{
				"structured_data": grpcResp.StructuredDataJson,
			})
			// å¦‚æœè§£æå¤±è´¥ï¼Œä½¿ç”¨åŸºæœ¬å“åº”
			structuredData = map[string]interface{}{
				"raw_response": grpcResp.StructuredDataJson,
			}
		}

		// æ„å»ºæ ‡å‡†åŒ–å“åº”æ ¼å¼
		response := map[string]interface{}{
			"intent":      grpcResp.Intent,
			"confidence":  0.9, // é»˜è®¤ç½®ä¿¡åº¦ï¼ŒPythonæœåŠ¡æœªè¿”å›æ­¤å­—æ®µ
			"response":    fmt.Sprintf("å¤„ç†äº†æ‚¨çš„è¯·æ±‚ï¼š%s", reqData.Text),
			"entities":    []string{},
			"sessionId":   reqData.SessionId,
			"suggestions": []string{},
			"data":        structuredData, // åŒ…å«è§£æåçš„ç»“æ„åŒ–æ•°æ®
		}

		// å¦‚æœstructured_dataä¸­æœ‰ç‰¹å®šå­—æ®µï¼Œæå–åˆ°å“åº”ä¸­
		if responseText, ok := structuredData["response"]; ok {
			response["response"] = responseText
		}
		if entities, ok := structuredData["entities"]; ok {
			response["entities"] = entities
		}
		if suggestions, ok := structuredData["suggestions"]; ok {
			response["suggestions"] = suggestions
		}
		if confidence, ok := structuredData["confidence"]; ok {
			response["confidence"] = confidence
		}

		// è®°å½•æŒ‡æ ‡
		duration := time.Since(start)
		reqLogger.LogAPIRequest(r.Method, r.URL.Path, http.StatusOK, duration, r.UserAgent())

		respondJSON(w, http.StatusOK, response)
	}
}

func handleIntelligenceHealth(logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "healthy"})
	}
}

func handleBusinessMetrics(logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}

func handleDetailedHealth(logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "healthy"})
	}
}

func handleClearCache(logger *logging.StructuredLogger) http.HandlerFunc {
	return func(w http.ResponseWriter, r *http.Request) {
		respondJSON(w, http.StatusOK, map[string]string{"status": "not_implemented"})
	}
}